Portfolio Inhalt fehlt noch(Bilder,video)

--- a/Website.html
+++ b/Website.html
@@ -4,14 +4,23 @@
         <meta charset="utf-8">
         <title>Wilkommen auf meiner Website</title>
     </head>
+
     <body>
-        <h1>Das bin Ich</h1>
-        <img src="Website_Bild.jpeg" alt="Das bin Ich"/>
+        <h1>Meine Person</h1>
+
+        <p>Hier geht es weiter zu <a href="#MeinPortfolio">Mein Portfolio </a> , <a href=#Übermich>Über mich</a> </p>
+
+        <img src="Website_Bild.jpeg" width="750" height="480">
+
+        <a id="Übermich"> </a>
         <h2>Über Mich</h2>
-        <p>Mein Name ist Asya ich bin 20 Jahre alt. Ich habe nach meiner Mittleren Reife eine Ausbildung als Foto-Medientechnische Assistentin und meinen Fachabi gemacht.</p> 
+        <p>Ich heiße Asya ich bin 20 Jahre alt. Ich habe nach meiner Mittleren Reife eine Ausbildung als Foto-Medientechnische Assistentin und meinen Fachabi gemacht.</p> 
         <br>Meine Hobbies sind Fotografieren und Judo, welches ich seit meinem sechsten Lebensjahr ausübe.</br> 
         <a href="https://www.youtube.com/?gl=DE">Hier kann man nach vielen Tutorials suchen!</a>
-        <h3 id="hier geht es weiter">das ist das ende</h3>
+
+        <a id="MeinPortfolio"></a>
+        <h3>Mein Portfolio</h3>
+    
 
        
     </body>
