--- a/Aufgabe_1.4/Kontakt.html
+++ b/Aufgabe_1.4/Kontakt.html
@@ -26,8 +26,11 @@
             <div class="row">
          <h1>Meine Kontaktdaten</h1>
 
-        <p>Falls ihr mehr über Mich wissen möchtet, dann schreibt mir gerne eine Mail an: <b class="mail">asya.tetik@hs-furtwangen.de </b></p> 
-        <p>Hier kommst du auf meinen <strong>Instagram</strong> <i class="mail"><a href="https://www.instagram.com/asyatetik" target="_blank">Account</a></i></p>
+        <p>Falls ihr mehr über <ins>mich</ins> wissen möchtet, dann schreibt mir gerne eine Mail an: <sub> <b>asya.tetik@hs-furtwangen.de </b> </sub> 
+
+        <hr>
+
+        <em>Hier kommst du auf meinen <strong><mark>Instagram</mark></strong> <i class="mail"><a href="https://www.instagram.com/asyatetik" target="_blank">Account</a></i></em>
       
                   
         </div>
