--- a/Aufgabe_1.4/Über_Mich.html
+++ b/Aufgabe_1.4/Über_Mich.html
@@ -25,18 +25,21 @@
         <div class="row">
             <div class="columne-2">
                 <h1>Das bin ich</h1>
-                <img src="Website_Bild.jpeg" alt="Das_bin_Ich" width="750" height="480">
+                <img src="Website_Bild.jpeg" alt="Das_bin_Ich">
 
                 <p>Ich heiße Asya und bin 20 Jahre alt. Ich habe nach meiner Mittleren Reife eine Ausbildung als Foto-Medientechnische Assistentin und meinen Fachabi gemacht.</p> 
                 <br>
-                <p>Meine Hobbies sind <strong>Fotografieren und Judo</strong>, welches ich seit meinem sechsten Lebensjahr ausübe.</p>
+                <p>Meine Hobbies sind <li><strong>Fotografieren</strong></li><li><strong>Sudoku spielen</strong></li><strong>und Judo</strong> welches ich seit meinem sechsten Lebensjahr ausübe.
+
+                <hr>
 
                 <p>Das ist einer meiner Lieblingssongs:</p>
                 <p><audio src="Ja Rule ft. Ashanti - Always on Time.mp3" controls></audio></p>
 
-                <em>Falls Ihr lust auf mehr Abwechslung in eurer Playlist sucht, dann schreibt mir eine Mail!</em>
-       
+                <em>Falls Ihr lust auf mehr <mark>Abwechslung</mark> in eurer Playlist sucht, dann schreibt mir eine Mail!</em>
 
+                <br>
+       
                 <a href="https://www.youtube.com/?gl=DE"> <em>Hier suche ich nach vielen Tutorials.</em></a>
 
         </div>
