--- a/Aufgabe_1.4/Über_Mich.html
+++ b/Aufgabe_1.4/Über_Mich.html
@@ -29,7 +29,15 @@
 
                 <p>Ich heiße Asya und bin 20 Jahre alt. Ich habe nach meiner Mittleren Reife eine Ausbildung als Foto-Medientechnische Assistentin und meinen Fachabi gemacht.</p> 
                 <br>
-                <p>Meine Hobbies sind <li><strong>Fotografieren</strong></li><li><strong>Sudoku spielen</strong></li><strong>und Judo</strong> welches ich seit meinem sechsten Lebensjahr ausübe.
+
+                <p>Meine Hobbies sind
+                <ul id="Liste">
+
+                <li><strong>Fotografieren</strong></li>
+                <li><strong>Sudoku spielen</strong></li>
+                </ul>
+                
+                <strong>und Judo</strong> welches ich seit meinem sechsten Lebensjahr ausübe.
 
                 <hr>
 
