--- a/Aufgabe_1.4/Kontakt.html
+++ b/Aufgabe_1.4/Kontakt.html
@@ -12,9 +12,9 @@
          <div class="row">
 
             <nav>
-                <a href="Über_Mich.html">Über Mich</a> <i>|</i>
+                <a href="ueber_mich.html">Über Mich</a> <i>|</i>
                 <a href="Portfolio.html">Portfolio</a> <i>|</i>
-                <a href="Kontakt.html" class="visited">Kontakt</a> <i>|</i>
+                <a href="Kontakt.html" class="visited">Kontakt</a> 
             </nav>
 
         </div>
@@ -24,7 +24,7 @@
         </header>
         <div class="container-main">
             <div class="row">
-         <h1>Meine Kontaktdaten</h1>
+                <div class="slide"><h1>Meine Kontaktdaten</h1></div>
 
         <p>Falls ihr mehr über <ins>mich</ins> wissen möchtet, dann schreibt mir gerne eine Mail an: <sub> <b>asya.tetik@hs-furtwangen.de </b> </sub> 
 
