--- a/Aufgabe_1.4/ueber_mich.html
+++ b/Aufgabe_1.4/ueber_mich.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="utf-8">
-        <title>Über Mich</title>
+        <title>ueber Mich</title>
         <link rel="stylesheet" type="text/css" href="style.css">
 
     </head>
@@ -12,19 +12,20 @@
         <div class="row">
 
             <nav>
+                <a href="ueber_mich.html" class="visited">Über Mich</a> <i>|</i>
                 <a href="Portfolio.html">Portfolio</a> <i>|</i>
-                <a href="Kontakt.html">Kontakt</a> <i>|</i>
-                <a href="Über_Mich.html" class="visited">Über Mich</a> <i>|</i>
+                <a href="Kontakt.html">Kontakt</a> 
+                
 
             </nav>
         </div>
 
-        </header>
+    </header>
 
     <div class="container-main">
         <div class="row">
             <div class="columne-2">
-                <h1>Das bin ich</h1>
+                <div class="slide"><h1>Das bin ich</h1></div>
                 <img src="Website_Bild.jpeg" alt="Das_bin_Ich">
 
                 <p>Ich heiße Asya und bin 20 Jahre alt. Ich habe nach meiner Mittleren Reife eine Ausbildung als Foto-Medientechnische Assistentin und meinen Fachabi gemacht.</p> 
@@ -42,7 +43,7 @@
                 <hr>
 
                 <p>Das ist einer meiner Lieblingssongs:</p>
-                <p><audio src="Ja Rule ft. Ashanti - Always on Time.mp3" controls></audio></p>
+                <p><audio src="Ja_Rule_ft._Ashanti_-_Always_on_Time.mp3" controls></audio></p>
 
                 <em>Falls Ihr lust auf mehr <mark>Abwechslung</mark> in eurer Playlist sucht, dann schreibt mir eine Mail!</em>
 
