--- a/Aufgabe_1.4/ueber_mich.html
+++ b/Aufgabe_1.4/ueber_mich.html
@@ -2,6 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>ueber Mich</title>
         <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -26,7 +27,7 @@
         <div class="row">
             <div class="columne-2">
                 <div class="slide"><h1>Das bin ich</h1></div>
-                <img src="Website_Bild.jpeg" alt="Das_bin_Ich">
+                <img src="Website_Bild.jpeg" alt="Das_bin_Ich" id="Ich">
 
                 <p>Ich heiße Asya und bin 20 Jahre alt. Ich habe nach meiner Mittleren Reife eine Ausbildung als Foto-Medientechnische Assistentin und meinen Fachabi gemacht.</p> 
                 <br>
