Bilder Namen Geändert

--- a/Aufgabe_1.4/Portfolio.html
+++ b/Aufgabe_1.4/Portfolio.html
@@ -36,8 +36,8 @@
         <br>
 
 
-        <img src="Ohrringe.jpg" alt="Glas_Bild" id="Glas">
-        <img src="Kater.jpg" alt="Miniaturfigur" id="Figuren"> 
+        <img src="Ohrringe.jpg" alt="Ohrringe" id="Ohrringe">
+        <img src="Kater.jpg" alt="Kater" id="Kater"> 
 
         <br>
         <br>
