--- a/Aufgabe_2.3/index.html
+++ b/Aufgabe_2.3/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="data.js" defer></script>
     <script src="script.js" defer></script>
-    <!-- <script src="data.js" defer></script> -->
+
 </head>
 
 <body>
@@ -16,11 +17,7 @@
 
     <div class="Absätze">
         <label>Spitzenauswahl:</label>
-        <select>
-            <option>Keine</option>
-            <option>Viereckig</option>
-            <option>Rund</option>
-            <option>Dreieckig</option>
+        <select id="spitze">
 
         </select>
 
@@ -29,11 +26,8 @@
         <div class="Absätze">
 
             <label>Rumpfauswahl:</label>
-            <select>
-                <option>Keine</option>
-                <option>Viereckig</option>
-                <option>Rund</option>
-                <option>Dreieckig</option>
+            <select id="rumpf">
+
             </select>
 
             <img src="Dreieck.png" id="Dreieck">
@@ -41,11 +35,8 @@
             <div class="Absätze">
 
                 <label>Antriebauswahl:</label>
-                <select>
-                    <option>Keine</option>
-                    <option>Viereckig</option>
-                    <option>Rund</option>
-                    <option>Dreieckig</option>
+                <select id="antrieb">
+            
                 </select>
 
                 <img src="Kreis.png" id="Kreis">
