Aufgabe_ 2.4 fertig / Bilder neu skaliert

--- a/Aufgabe_2.3/index.html
+++ b/Aufgabe_2.3/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Baue deine eigene Rakete!</h1>
+    <h1>Baue deine eigene Rackete!</h1>
     <p>Hier kannst du deine eigene Rakete zusammen stellen:</p>
 
     <div class="Absätze">
@@ -21,30 +21,30 @@
 
         </select>
 
-        <img src="Viereck.png" id="Viereck">
+        <img src="" id="SpitzeImg">
+    </div>
+    <div class="Absätze">
 
-        <div class="Absätze">
+        <label>Rumpfauswahl:</label>
+        <select id="rumpf">
 
-            <label>Rumpfauswahl:</label>
-            <select id="rumpf">
+        </select>
 
-            </select>
+        <img src="" id="RumpfImg">
+    </div>
+    <div class="Absätze">
 
-            <img src="Dreieck.png" id="Dreieck">
+        <label>Antriebauswahl:</label>
+        <select id="antrieb">
 
-            <div class="Absätze">
+        </select>
 
-                <label>Antriebauswahl:</label>
-                <select id="antrieb">
-            
-                </select>
+        <img src="" id="AntriebImg">
+    </div>
+    <i>Los gehts! :</i>
 
-                <img src="Kreis.png" id="Kreis">
+    <a href="rakete.html"> Bestätige deine Auswahl</a>
 
-                <i>Los gehts! :</i>
-
-                <button>Bestätige deine Auswahl</button>
-            </div>
 
 </body>
 
