--- a/Aufgabe_2.3/rakete.html
+++ b/Aufgabe_2.3/rakete.html
@@ -13,7 +13,14 @@
 
 <body>
     <h2>Hier siehst du deine fertig zusammen gestellte Rakete:</h2>
+<div class= "fertigesBild">
+    <img src="" id="SpitzeImg">
+    <img src="" id="RumpfImg">
+    <img src="" id="AntriebImg">
+</div>
+
     <p>Viel Spaß mit deiner Rakete!</p>
+
 </body>
 
 </html>
