--- a/Aufgabe_2.3/index.html
+++ b/Aufgabe_2.3/index.html
@@ -21,7 +21,7 @@
 
         </select>
 
-        <img src="" id="SpitzeImg">
+        <img src="x" id="SpitzeImg" alt="Spitze">
     </div>
     <div class="Absätze">
 
@@ -30,7 +30,7 @@
 
         </select>
 
-        <img src="" id="RumpfImg">
+        <img src="x" id="RumpfImg" alt="Rumpf">
     </div>
     <div class="Absätze">
 
@@ -39,7 +39,7 @@
 
         </select>
 
-        <img src="" id="AntriebImg">
+        <img src="x" id="AntriebImg" alt="Antrieb">
     </div>
     <i>Los gehts! :</i>
 
