--- a/Aufgabe_2.3/rakete.html
+++ b/Aufgabe_2.3/rakete.html
@@ -14,9 +14,9 @@
 <body>
     <h2>Hier siehst du deine fertig zusammen gestellte Rakete:</h2>
     <div class="fertigesBild">
-        <img src="" id="SpitzeImg">
-        <img src="" id="RumpfImg">
-        <img src="" id="AntriebImg">
+        <img src="x" id="SpitzeImg" alt="Spitze">
+        <img src="x" id="RumpfImg" alt="Rumpf">
+        <img src="x" id="AntriebImg" alt="Antrieb">
     </div>
 
     <p>Viel Spaß mit deiner Rakete!</p>
