--- a/Aufgabe_3.1/index.html
+++ b/Aufgabe_3.1/index.html
@@ -16,11 +16,11 @@
 
       <label for="fname">Vorname:</label>
       <input type="text" name="fname" />
-      <label for="fname">Nachname:</label>
+      <label for="lname">Nachname:</label>
       <input type="text" name="lname" />
-      <label for="lname">Alter:</label>
+      <label for="age">Alter:</label>
       <input type="number" />
-      <label for="fname">Mail-Adresse:</label>
+      <label for="mail">Mail-Adresse:</label>
       <input type="text" name="eadresse" />
 
       <button id="submit" name="Absenden" type="button">Abschicken</button>
