--- a/Aufgabe_3.1/button.html
+++ b/Aufgabe_3.1/button.html
@@ -21,15 +21,8 @@
 
   <div class="container">
     <h1 id="kontakt">Button schickt anfrage an Server</h1>
-    <form action="https://supernova22.herokuapp.com/" id="buttonForm" method="POST">
-
-      
-
-      <button type="submit">User anzeigen</button>
-    </form>
-
+    <button id="getUsers">User anzeigen</button>
     <div id="users"></div>
-
   </div>
 </body>
 
