--- a/Aufgabe_3.1/login.html
+++ b/Aufgabe_3.1/login.html
@@ -15,22 +15,22 @@
     <nav>
       <a href="index.html">Sign up</a>
       <a href="button.html">Button</a>
-      <a href="login.html"class="active">Login</a>
+      <a href="login.html" class="active">Login</a>
     </nav>
   </header>
 
   <div class="container">
     <h1 id="kontakt">Login</h1>
- 
-    <form action="https://supernova22.herokuapp.com/" id="loginForm" method="POST">
 
-        <label for="email">Mail-Adresse:</label>
-        <input type="email" name="email" id="email" required />
+    <form id="loginForm" method="POST">
 
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" required />
+      <label for="email">Mail-Adresse:</label>
+      <input type="email" name="email" id="email" required />
 
-        <button type="submit">Login</button>
+      <label for="password">Password:</label>
+      <input type="password" name="password" id="password" required />
+
+      <button type="submit">Login</button>
     </form>
 
   </div>
