--- a/Aufgabe_3.1/index.html
+++ b/Aufgabe_3.1/index.html
@@ -13,7 +13,7 @@
 
   <header id="header">
     <nav>
-      <a href="index.html"class="active">Sign up</a>
+      <a href="index.html" class="active">Sign up</a>
       <a href="button.html">Button</a>
       <a href="login.html">Login</a>
     </nav>
@@ -24,19 +24,18 @@
     <form action="https://supernova22.herokuapp.com/" id="signupForm" method="POST">
 
       <label for="fname">Vorname:</label>
-      <input type="text" name="fname" />
+      <input type="text" name="firstName" id="fname" required />
       <label for="lname">Nachname:</label>
-      <input type="text" name="lname" />
-      <label for="age">Alter:</label>
-      <input type="number" />
-      <label for="mail">Mail-Adresse:</label>
-      <input type="text" name="email" id="email" required/>
+      <input type="text" name="lastName" id="lname" required />
+      <label for="age">Age:</label>
+      <input type="number" id="age" name="age" required />
+      <label for="email">Mail-Adresse:</label>
+      <input type="email" name="email" id="email" required />
       <label for="password">Password:</label>
       <input type="password" name="password" id="password" required />
 
       <button type="submit">Sign up</button>
     </form>
-
   </div>
 </body>
 
