--- a/Aufgabe_3.1/index.html
+++ b/Aufgabe_3.1/index.html
@@ -21,7 +21,7 @@
 
   <div class="container">
     <h1 id="kontakt"> Füllen Sie dieses Kontaktformular aus um sich zu registrieren:</h1>
-    <form action="https://supernova22.herokuapp.com/" id="signupForm" method="POST">
+    <form action="http://supernova22.herokuapp.com/" id="signupForm" method="POST">
 
       <label for="fname">Vorname:</label>
       <input type="text" name="firstName" id="fname" required />
@@ -34,7 +34,7 @@
       <label for="password">Password:</label>
       <input type="password" name="password" id="password" required />
 
-      <button type="submit">Sign up</button>
+      <button type="button">Sign up</button>
     </form>
   </div>
 </body>
