--- a/Aufgabe_2.2/index.html
+++ b/Aufgabe_2.2/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <canvas id="myFirstCanvas" width="500" height="400"></canvas>
 
 </body>
 </html>
